# quadruped_kinematics

./: CMakeLists.txt  CONTRIBUTING.md  README.md  package.xml
.github/: PULL_REQUEST_TEMPLATE.md
include/kinematics/: quadruped_kinematics.h  quadruped_matrix.h  spot_micro_kinematics.h  spot_micro_matrix.h
kinematics/: quadruped_kinematics.cc  quadruped_matrix.cc  spot_micro_kinematics.cc  spot_micro_matrix.cc
tests/: test_addition_matrix.cc  test_addition_matrix.py  test_base_body_kinematics.cc  test_base_body_kinematics.py  test_complete_body_kinematics.cc  test_complete_body_kinematics.py  test_complete_matrix.py  test_dot_product.cc  test_dot_product.py  test_double_dot_product.cc  test_double_dot_product.py  test_inverse_matrix.cc  test_leg_kinematics.cc  test_leg_kinematics.py  test_leg_points.cc  test_leg_points.py  test_length_matrix.cc
